Eliminate duplication and refactoring

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, "Help") %>
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+
+<h1>Help</h1>
+<p>
+Help the Ruby on Rails Tutorial about the sample app at the
+<a href="http://www.railstutorial.org/#contact">contact page</a>.
+</p>
