--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, "About") %>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>About</h1>
+<p>
+About the Ruby on Rails Tutorial about the sample app at the
+<a href="http://www.railstutorial.org/#contact">contact page</a>.
+</p>
