--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
 <% provide(:title, "Home") %>
 
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Home</h1>
+<p>
+Home the Ruby on Rails Tutorial about the sample app at the
+<a href="http://www.railstutorial.org/#contact">contact page</a>.
+</p>
