--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,12 @@
 <% provide(:title, "Home") %>
 
-<h1>Home</h1>
-<p>
-Home the Ruby on Rails Tutorial about the sample app at the
-<a href="http://www.railstutorial.org/#contact">contact page</a>.
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to BlogHouse</h1>
+    <h2>
+        This is the homepage for the BlogHouse sample application.
+    </h2>
+    
+    <%= link_to 'Sign up now!', '#', class: 'btn btn-large btn-primary' %>
+</div>
+
+<%= link_to image_tag('rails.png', alt: 'Rails'), '#' %>
