Finish layout and routes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,10 @@ $gray-medium-light: #eaeaea;
     @include box_sizing;
 }
 
+* {
+    font-family: Arial;
+}
+
 h1, h2, h3, h4, h5, h6 {
     line-height: 1;
 }
