--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,6 +74,17 @@ input {
 		margin: 0 0 30px 0;
 	}
 }
+
+/* users */
+.users {
+	list-style: none;
+	margin: 0;
+	li {
+		overflow: auto;
+		padding: 10px 0;
+		border-bottom: 1px solid $gray-medium-light;
+	}
+}
 // .field_with_errors {
 // 	@extend .has-error;
 // 	.form-control {
